--- a/src/components/list/list.css
+++ b/src/components/list/list.css
@@ -3,3 +3,20 @@
     display: flex;
     flex-direction: column;
 }
+
+/* Hide scrollbars but keep scrollable content */
+/* For Chrome, Edge, Safari */
+::-webkit-scrollbar {
+  width: 0px;
+  background: transparent;
+}
+
+/* For Firefox */
+* {
+  scrollbar-width: none;
+}
+
+/* For IE/Edge (legacy) */
+* {
+  -ms-overflow-style: none;
+}
