--- a/src/components/chat/chat.css
+++ b/src/components/chat/chat.css
@@ -62,51 +62,51 @@
     flex-direction: column;
     gap: 20px;
 
-    .message{
-        max-width: 70%;
+    .message {
+      max-width: 70%;
+      display: flex;
+      gap: 20px;
+
+      &.own {
+        align-self: flex-end;
+
+        .texts {
+          p {
+            background-color: #5183fe;
+          }
+        }
+      }
+
+      img {
+        width: 30px;
+        height: 30px;
+        border-radius: 50%;
+        object-fit: cover;
+      }
+
+      .texts {
+        flex: 1;
         display: flex;
-        gap: 20px;
+        flex-direction: column;
+        gap: 5px;
 
-        &.own{
-            align-self: flex-end;
-
-            .texts{
-                p{
-                    background-color: #5183fe;
-                }
-            }
+        img {
+          width: 100%;
+          height: 300px;
+          border-radius: 10px;
+          object-fit: cover;
         }
 
-        img{
-            width: 30px;
-            height: 30px;
-            border-radius: 50%;
-            object-fit: cover;
+        p {
+          padding: 20px;
+          background-color: rgba(17, 25, 40, 0.5);
+          border-radius: 10px;
         }
 
-        .texts{
-            flex: 1;
-            display: flex;
-            flex-direction: column;
-            gap: 5px;
-
-            img{
-                width: 100%;
-                height: 300px;
-                border-radius: 10px;
-                object-fit: cover;
-            }
-
-            p{
-                padding: 20px;
-                background-color: rgba(17, 25, 40, 0.5);
-                border-radius: 10px;
-            }
-
-            span{
-                font-size: 13px;
-            }
+        span {
+          font-size: 13px;
         }
+      }
     }
   }
 
@@ -125,10 +125,10 @@
     }
 
     img {
-        width: 20px;
-        height: 20px;
-        cursor: pointer;
-      }
+      width: 20px;
+      height: 20px;
+      cursor: pointer;
+    }
 
     input {
       flex: 1;
@@ -139,16 +139,21 @@
       padding: 20px;
       border-radius: 10px;
       font-size: 16px;
+
+      
+      &:disabled {
+        cursor: not-allowed;
+      }
     }
 
-    .emoji{
-        position: relative;
+    .emoji {
+      position: relative;
 
-        .picker{
-            position: absolute;
-            bottom: 50px;
-            left: 0;
-        }
+      .picker {
+        position: absolute;
+        bottom: 50px;
+        left: 0;
+      }
     }
 
     .sendButton {
@@ -158,8 +163,11 @@
       border: none;
       border-radius: 5px;
       cursor: pointer;
+
+      &:disabled {
+        background-color: #5182feb4;
+        cursor: not-allowed;
+      }
     }
   }
 }
-
-
